[gd_scene load_steps=42 format=2]

[ext_resource path="res://Character/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-idle-00-1.3.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-die-00-1.3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-die-01-1.3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-die-02-1.3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-die-03-1.3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-die-04-1.3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-die-05-1.3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-die-06-1.3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-hurt-00-1.3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-hurt-01-1.3.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-hurt-02-1.3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-attack3-00-1.3.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-attack3-01-1.3.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-attack3-02-1.3.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-attack3-03-1.3.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-attack3-04-1.3.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-attack3-05-1.3.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-jump-00-1.3.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-jump-01-1.3.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-jump-02-1.3.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-jump-03-1.3.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-crouch-00-1.3.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-crouch-01-1.3.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-crouch-03-1.3.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-crouch-02-1.3.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-fall-00-1.3.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-fall-01-1.3.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-run-00-1.3.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-run-01-1.3.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-run-02-1.3.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-run-03-1.3.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-run-04-1.3.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-run-05-1.3.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-attack2-00-1.3.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-attack2-01-1.3.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-attack2-02-1.3.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-attack2-03-1.3.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-attack2-04-1.3.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Indvidual Sprites/adventurer-attack2-05-1.3.png" type="Texture" id=40]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "dead",
"speed": 12.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "hit",
"speed": 12.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "attack2",
"speed": 12.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": false,
"name": "jump",
"speed": 12.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": false,
"name": "crouch",
"speed": 12.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "fall",
"speed": 12.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
} ]

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1, 1.04358 )
z_index = 1
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.298325, -0.198883 )
frames = SubResource( 1 )
animation = "hit"
frame = 2
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 14, 0 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 20, 0 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -0.0472299, 3.43213 )
scale = Vector2( 1.15587, 1.47525 )
polygon = PoolVector2Array( -1.87067, -10.1691, 1.23502, -10.1078, 6.54739, -7.34652, 6.46566, 4.80302, 6.22047, 9.83464, -4.56772, 9.95737, -4.48599, 3.8826, -9.30798, 3.94396, -9.0628, -3.48076, -5.38501, -4.21709, -8.32724, -8.6351 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 0, 6.53438 )
scale = Vector2( 1, 1.11315 )
polygon = PoolVector2Array( -5.32693, -9.59557, 9.22113, -8.45708, 9.50454, 3.00921, 7.2373, 6.66866, 7.33177, 10.0028, -5.4214, 9.84019, -5.32693, 5.93677, -10.5227, 3.25317, -5.61034, -1.46346 )
disabled = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ItemTimer" type="Timer" parent="."]
wait_time = 0.3
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="ItemTimer" to="." method="_on_ItemTimer_timeout"]
